[package]
name = "hoconvert"
version = "1.1.1"
authors = ["Mathias Oertel <mathias.oertel@pm.me>"]
edition = "2024"
description = "CLI tool to convert HOCON into valid JSON, YAML, or TOML."
readme = "README.md"
keywords = ["cli", "hocon", "json", "yaml", "toml", "converter"]
categories = ["command-line-utilities"]
license = "MIT"
repository = "https://github.com/maoertel/hoconvert"

[dependencies]
clap = { version = "4.6", features = ["derive"] }

hocon = { git = "https://github.com/maoertel/hocon.rs", tag = "v0.10.0" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yml = "0.0.13"
toml = "1.1"

[dev-dependencies]
predicates = "3.1"
assert_cmd = "2.2"
serde_yml = "0.0.13"
toml = "1.1"
